@@ -254,11 +254,11 @@ sub _editField
         $model->setRow($force, %params);
     } catch (EBox::Exceptions::DataInUse $e) {
         $self->{json}->{success} = 1;
-        $self->{json}->{changeRowForm} = $self->_htmlForDataInUse(
+        $self->{json}->{dataInUseForm} = $self->_htmlForDataInUse(
             $model->table()->{actions}->{editField},
             "$e",
            );
-        return;
+        return $id;
     }
 
     for my $fieldName (keys %changedValues) {
@@ -660,6 +660,9 @@ sub editBooleanAction
     my ($self) = @_;
     delete $self->{template}; # to not print standard response
     $self->editBoolean();
+    if ($self->{json}) {
+        $self->_setJSONSuccess($self->{'tableModel'});
+    }
 }
 
 sub cloneAction
