@@ -1,4 +1,5 @@
 HEAD
+	+ Fix data in use behaviour on edition
 	+ Give support to data in use exception for in-place booleans
 	+ Fix warnOnChangeId framework
 3.4
